third_party/move/move-compiler-v2/tests/ability-check/ability_violation.move
module 0x42::ability {

    struct Impotent {}

    fun invalid_copy() {
        let x = Impotent {};
        (x, x);
    }
}
